tests/snapshots/generate_json__package_lib__pass__package_multi_target.snap
---
source: tests/generate_json.rs
expression: output

---
STDERR:

STDOUT:

[
{"module":"package_multi_target","path":"/Users/grayson/code/contrib/cargo-modules/tests/projects/package_multi_target/src/lib.rs","kind":"crate","visibility":"pub","attributes":[]}
]

